--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ buck-out/
 
 TravelCardServer/\.vs/
 TravelCardServer/.vs/
+TravelCardServer/.vs
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
