--- a/CardsMobile/package.json
+++ b/CardsMobile/package.json
@@ -21,8 +21,10 @@
     "react-native": "0.61.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-google-pay": "^2.1.0",
     "react-native-image-picker": "^2.3.1",
     "react-native-reanimated": "^1.7.0",
+    "react-native-responsive-fontsize": "^0.4.3",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
     "react-native-vector-icons": "^6.6.0",
